--add some ui for auth

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -20,5 +20,24 @@
   "head_text_onboarding2": " Plumber & expart nearby you",
   "head_text_onboarding3": "Professional home cleaning",
   "head_text_onboarding4": "Head Text Onboarding4",
-  "get_started": "Get Started"
+  "get_started": "Get Started",
+  "invalid_phone_error_start": "Please Start with +1",
+  "forget_password": "Forgot your password!",
+  "sign_in": "Sign in",
+  "sign_up": "Sign UP",
+  "login_page_message": "Please log in or sign up for an account",
+  "do_not_have_an_account": "If you don't have an account,",
+  "verification_email_sent": "Email Sent To Your Mail Box Successfully",
+  "forget_password_explain": "To reset your password, please enter the email address of your account",
+  "next": "Next",
+  "reset_my_password": "Reset My Password",
+  "password_validate_message": "Password must be at least 8 characters that includes number, special character, capital and small",
+  "change_password": "Change password",
+  "old_password": "Old password",
+  "new_password": "New password",
+  "confirm_new_password": "Confirm new password",
+  "incorrect_password": "Incorrect password",
+  "forgot_password": "Forgot password?",
+  "do_you_want_to_change_password": "Do you want to change password?",
+  "do_you_want_to_set_password": "Do you want to set password?"
 }
