--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -60,5 +60,24 @@
   "are_you_sure_you_want_to_logout": "Are you sure you want to logout?",
   "logout": "Logout",
   "exit": "Exit",
-  "close": "Close"
+  "close": "Close",
+  "choose_category": "Choose category",
+  "search": "Search",
+  "category": "Category",
+  "provider": "Provider",
+  "choose_provider": "Choose provider",
+  "no_data": "No data",
+  "delete": "Delete",
+  "delete_message": "Are you sure you want to delete ",
+  "edit_service": "Edit service",
+  "service": "Service",
+  "delete_service": "Delete service",
+  "success": "Success",
+  "add": "Add",
+  "name": "Name",
+  "description": "Description",
+  "address": "Address",
+  "price": "Price",
+  "add_service": "Add service",
+  "home": "Home"
 }
